fix aspect ratio distortion on tall images

--- a/src/app.css
+++ b/src/app.css
@@ -97,7 +97,7 @@
       @apply font-semibold! tracking-tight;
     }
     img {
-      @apply mx-auto mb-0 md:max-h-(--content-width) rounded-md;
+      @apply mx-auto mb-0 md:max-h-(--content-width) object-scale-down rounded-md;
     }
     @media (prefers-color-scheme: light) {
       pre {
